# GoMat

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Doxyfile  Makefile  README.md  auto_run.sh  build_and_run_x86.sh  cmake_install.cmake
core/: CMakeLists.txt
core/include/: decompositions.h  gomat.h  linear_solver.h  matrix.h  matrix_stream.h  matrix_view.h  mem_alloc.h  utils.h  vector.h  vector_stream.h
core/src/: cuda_helpler.h  linear_solver.cpp  matrix_basic_features.cpp  matrix_constructor.cpp  matrix_io.cpp  matrix_simdproduct.cpp
dataframe/: CMakeLists.txt
dataframe/src/: io.cpp
include/: gomat.h  linear_solver.h  matrix.h  matrix_stream.h  mem_alloc.h  utils.h  vector.h
series/: CMakeLIsts.txt
series/src/: series.cpp
src/: linear_solver.cpp  matrix_basic_features.cpp  matrix_complex_features.cpp  matrix_constructor.cpp  matrix_decompositions.cpp  matrix_io.cpp  matrix_operations.cpp  matrix_private_member.cpp  matrix_simdproduct.cpp  matrix_transformation.cpp  matrix_view.cpp  utils.cpp  vector.cpp
test/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
tests/: CMakeLists.txt  main.cpp
